Kubernates/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-app
  namespace: devops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-app

  template:
    metadata:
      labels:
        app: devops-app

    spec:
      containers:
        - name: devops-app
          image: 584523978049.dkr.ecr.ap-south-1.amazonaws.com/devops-assignment-app:1.0

          ports:
            - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
