Kubernates/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-app
  namespace: devops

spec:
  type: ClusterIP

  selector:
    app: devops-app

  ports:
    - port: 80
      targetPort: 8080
